force-app/main/default/objects/clofor_com_cfs__Contract__c/clofor_com_cfs__Contract__c.object-meta.xml
<CustomObject>
    <label>Contract.</label>
    <nameField>
        <displayFormat>CT-{000000}</displayFormat>
        <label>CONTRACT ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract.</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>