force-app/main/default/objects/clofor_com_cfs__Contract__c/fields/clofor_com_cfs__BillingFrequency__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BillingFrequency__c</fullName>
    <label>Billing Frequency to End User(Charge)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__Frequency</valueSetName>
    </valueSet>
</CustomField>