force-app/main/default/objects/clofor_com_cfs__Contract__c/fields/clofor_com_cfs__BuyersAddress__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BuyersAddress__c</fullName>
    <label>Buyer&apos;s Address</label>
    <type>TextArea</type>
</CustomField>