force-app/main/default/objects/clofor_com_cfs__Contract__c/fields/clofor_com_cfs__ChargeFreeClassification__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ChargeFreeClassification__c</fullName>
    <description>The field to identify whether the end user and agency charges are free or charge</description>
    <label>Charge or Free Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__ChargeFreeClassification</valueSetName>
    </valueSet>
</CustomField>