force-app/main/default/objects/clofor_com_cfs__Contract__c/fields/clofor_com_cfs__ChargeFreeEndDateFromSupplier__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ChargeFreeEndDateFromSupplier__c</fullName>
    <label>Charge Free End Date From Supplier</label>
    <type>Date</type>
</CustomField>