force-app/main/default/objects/clofor_com_cfs__Contract__c/fields/clofor_com_cfs__ChargeFreeEndDateToAgent__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ChargeFreeEndDateToAgent__c</fullName>
    <label>Charge Free End Date to Agent</label>
    <type>Date</type>
</CustomField>