force-app/main/default/objects/clofor_com_cfs__Contract__c/fields/clofor_com_cfs__ChargeFreePeriodOverdueFlag__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ChargeFreePeriodOverdueFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Charge Free Period Overdue Flag</label>
    <type>Checkbox</type>
</CustomField>