force-app/main/default/objects/clofor_com_cfs__Contract__c/fields/clofor_com_cfs__ChargeFreeStartDateToAgent__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ChargeFreeStartDateToAgent__c</fullName>
    <label>Charge Free Start Date to Agent</label>
    <type>Date</type>
</CustomField>