force-app/main/default/objects/clofor_com_cfs__Contract__c/fields/clofor_com_cfs__CommodityDescriptionofGoodsPI__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CommodityDescriptionofGoodsPI__c</fullName>
    <label>Commodity Description of Goods-PI</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>