force-app/main/default/objects/clofor_com_cfs__Contract__c/fields/clofor_com_cfs__ContractEndDate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ContractEndDate__c</fullName>
    <label>CONTRACT END DATE</label>
    <type>Date</type>
</CustomField>