force-app/main/default/objects/clofor_com_cfs__Contract__c/fields/clofor_com_cfs__ContractName__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ContractName__c</fullName>
    <label>CONTRACT NAME</label>
    <length>255</length>
    <type>Text</type>
</CustomField>