force-app/main/default/objects/clofor_com_cfs__Contract__c/fields/clofor_com_cfs__ContractorName__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ContractorName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CONTRACTOR NAME</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CONTRACT</relationshipLabel>
    <relationshipName>Contract</relationshipName>
    <type>Lookup</type>
</CustomField>