force-app/main/default/objects/clofor_com_cfs__Contract__c/fields/clofor_com_cfs__ContractorType__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ContractorType__c</fullName>
    <label>CONTRACTOR TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__ContracterType</valueSetName>
    </valueSet>
</CustomField>