force-app/main/default/objects/clofor_com_cfs__Contract__c/fields/clofor_com_cfs__ContractPeriodChargeFree__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ContractPeriodChargeFree__c</fullName>
    <label>Contract Period Include Charge &amp; Free</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>