force-app/main/default/objects/clofor_com_cfs__Contract__c/fields/clofor_com_cfs__ContractQuantity__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ContractQuantity__c</fullName>
    <label>CONTRACT QUANTITY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>