force-app/main/default/objects/clofor_com_cfs__Contract__c/fields/clofor_com_cfs__ContractStatus__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ContractStatus__c</fullName>
    <label>CONTRACT STATUS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__OrderStatus</valueSetName>
    </valueSet>
</CustomField>