force-app/main/default/objects/clofor_com_cfs__Contract__c/fields/clofor_com_cfs__FirstBillingDate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__FirstBillingDate__c</fullName>
    <label>First Billing Date</label>
    <type>Date</type>
</CustomField>