force-app/main/default/objects/clofor_com_cfs__Contract__c/fields/clofor_com_cfs__LastBillingDate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__LastBillingDate__c</fullName>
    <label>Last Billing Date</label>
    <type>Date</type>
</CustomField>