force-app/main/default/objects/clofor_com_cfs__Contract__c/fields/clofor_com_cfs__MonthAfterFirstBillingDate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__MonthAfterFirstBillingDate__c</fullName>
    <formula>MONTH(TODAY())- MONTH(clofor_com_cfs__FirstBillingDate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month After First Billing Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>