force-app/main/default/objects/clofor_com_cfs__Contract__c/fields/clofor_com_cfs__Notes__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Notes__c</fullName>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>