force-app/main/default/objects/clofor_com_cfs__Contract__c/fields/clofor_com_cfs__NotifyParty__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__NotifyParty__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Notify Party</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CONTRACT. (Notify Party)</relationshipLabel>
    <relationshipName>CONTRACT1</relationshipName>
    <type>Lookup</type>
</CustomField>