force-app/main/default/objects/clofor_com_cfs__Contract__c/fields/clofor_com_cfs__ParentContractID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ParentContractID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PARENT CONTRACT ID</label>
    <referenceTo>clofor_com_cfs__Contract__c</referenceTo>
    <relationshipLabel>CHILD CONTRACT</relationshipLabel>
    <relationshipName>CONTRACT</relationshipName>
    <type>Lookup</type>
</CustomField>