force-app/main/default/objects/clofor_com_cfs__Contract__c/fields/clofor_com_cfs__PlanTotalAmountofSellingFCYRollup__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PlanTotalAmountofSellingFCYRollup__c</fullName>
    <label>Plan Total Amount of Selling(FCY)-Rollup</label>
    <summarizedField>clofor_com_cfs__ContractProduct__c.clofor_com_cfs__PlanTotalAmountofSellingFCY__c</summarizedField>
    <summaryForeignKey>clofor_com_cfs__ContractProduct__c.clofor_com_cfs__CONTRACT__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>