force-app/main/default/objects/clofor_com_cfs__Contract__c/fields/clofor_com_cfs__ProformaInvoiceNo__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ProformaInvoiceNo__c</fullName>
    <label>Proforma Invoice No#</label>
    <type>TextArea</type>
</CustomField>