force-app/main/default/objects/clofor_com_cfs__Contract__c/fields/clofor_com_cfs__SellerCompany__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__SellerCompany__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Seller Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CONTRACT. (Seller Company)</relationshipLabel>
    <relationshipName>CONTRACTSeller</relationshipName>
    <type>Lookup</type>
</CustomField>