force-app/main/default/objects/clofor_com_cfs__Contract__c/fields/clofor_com_cfs__TotalAmountofSellingFCYtext__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TotalAmountofSellingFCYtext__c</fullName>
    <label>Total Amount of Selling(FCY)-text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>