force-app/main/default/objects/clofor_com_cfs__Contract__c/fields/clofor_com_cfs__TotalNumberofContainerfromGoodSO__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TotalNumberofContainerfromGoodSO__c</fullName>
    <label>Total Number of Container(from Good S/O)</label>
    <summarizedField>clofor_com_cfs__SALES_ORDER__c.clofor_com_cfs__TotalNumberofContainer__c</summarizedField>
    <summaryForeignKey>clofor_com_cfs__SALES_ORDER__c.clofor_com_cfs__ContractID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>