force-app/main/default/objects/clofor_com_cfs__Contract__c/fields/clofor_com_cfs__TotalNumberofGoodSO__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TotalNumberofGoodSO__c</fullName>
    <label>Total Number of Good S/O</label>
    <summaryForeignKey>clofor_com_cfs__SALES_ORDER__c.clofor_com_cfs__ContractID__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>