force-app/main/default/objects/clofor_com_cfs__Contract__c/fields/clofor_com_cfs__TotalPlanChargeQuantityRollup__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TotalPlanChargeQuantityRollup__c</fullName>
    <label>Total Plan Charge Quantity-Rollup</label>
    <summarizedField>clofor_com_cfs__ContractProduct__c.clofor_com_cfs__PlanChargeQuantity__c</summarizedField>
    <summaryForeignKey>clofor_com_cfs__ContractProduct__c.clofor_com_cfs__CONTRACT__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>