force-app/main/default/objects/clofor_com_cfs__Contract__c/fields/clofor_com_cfs__TruckFleetID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TruckFleetID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TRUCK &amp; FLEET ID</label>
    <referenceTo>clofor_com_cfs__TruckFleet__c</referenceTo>
    <relationshipLabel>CONTRACT</relationshipLabel>
    <relationshipName>CONTRACT</relationshipName>
    <type>Lookup</type>
</CustomField>