force-app/main/default/objects/clofor_com_cfs__Contract__c/fields/clofor_com_cfs__UnitPrice__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__UnitPrice__c</fullName>
    <label>Unit Price</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>