force-app/main/default/objects/clofor_com_cfs__Contract__c/fields/clofor_com_cfs__UnitpriceChargeUnit__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__UnitpriceChargeUnit__c</fullName>
    <label>Unit price/Charge Unit</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>clofor_com_cfs__Unitpricewillbechargedbaseon__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>USD/MT</fullName>
            </value>
            <value>
                <fullName>USD/Pallet</fullName>
            </value>
            <value>
                <fullName>USD/Bag</fullName>
            </value>
            <value>
                <fullName>USD/Carton</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>