force-app/main/default/objects/clofor_com_cfs__Contract__c/fields/clofor_com_cfs__Unitpricewillbechargedbaseon__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Unitpricewillbechargedbaseon__c</fullName>
    <label>Unit price will be charged base on</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gross Weight</fullName>
            </value>
            <value>
                <fullName>Net Weight</fullName>
            </value>
            <value>
                <fullName>G.W (MT)</fullName>
            </value>
            <value>
                <fullName>N.W (MT)</fullName>
            </value>
            <value>
                <fullName>Pallet</fullName>
            </value>
            <value>
                <fullName>Bag</fullName>
            </value>
            <value>
                <fullName>Carton</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>