force-app/main/default/objects/clofor_com_cfs__Contract__c/recordTypes/clofor_com_cfs__BuyingClosedEnded.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__BuyingClosedEnded</fullName>
    <active>true</active>
    <label>Buying Closed-Ended</label>
</RecordType>