force-app/main/default/objects/clofor_com_cfs__Contract__c/recordTypes/clofor_com_cfs__BuyingOpenEnded.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__BuyingOpenEnded</fullName>
    <active>true</active>
    <label>Buying Open-Ended</label>
</RecordType>