force-app/main/default/objects/clofor_com_cfs__Contract__c/recordTypes/clofor_com_cfs__SellingClosedEnded.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__SellingClosedEnded</fullName>
    <active>true</active>
    <label>Selling Closed-Ended</label>
</RecordType>