force-app/main/default/objects/clofor_com_cfs__Contract__c/recordTypes/clofor_com_cfs__SellingOpenEnded.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__SellingOpenEnded</fullName>
    <active>true</active>
    <label>Selling Open-Ended</label>
</RecordType>