force-app/main/default/objects/clofor_com_cfs__Contract__c/listViews/clofor_com_cfs__All.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__All</fullName>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__Active__c</columns>
    <columns>clofor_com_cfs__ContractorType__c</columns>
    <columns>clofor_com_cfs__ContractName__c</columns>
    <columns>clofor_com_cfs__ContractorName__c</columns>
    <columns>clofor_com_cfs__ContractTerm__c</columns>
    <columns>clofor_com_cfs__ContractStartDate__c</columns>
    <columns>clofor_com_cfs__ContractEndDate__c</columns>
    <columns>clofor_com_cfs__BillingAddress__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>