force-app/main/default/objects/clofor_com_cfs__Contract__c/listViews/clofor_com_cfs__ContractList.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__ContractList</fullName>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__ContractNumber__c</columns>
    <columns>clofor_com_cfs__Active__c</columns>
    <columns>clofor_com_cfs__ContractQuantity__c</columns>
    <columns>clofor_com_cfs__ContractAmount__c</columns>
    <columns>clofor_com_cfs__Currency__c</columns>
    <columns>clofor_com_cfs__ContractStatus__c</columns>
    <columns>clofor_com_cfs__ContractEndDate__c</columns>
    <columns>clofor_com_cfs__ContractStartDate__c</columns>
    <columns>clofor_com_cfs__ContractorName__c</columns>
    <columns>clofor_com_cfs__QuoteID__c</columns>
    <filterScope>Mine</filterScope>
    <label>Contract List</label>
</ListView>